--- a/package.json
+++ b/package.json
@@ -3,14 +3,59 @@
 	"version": "0.0.1",
 	"description": "boilerplate for front (CSS & JS automation)",
 	"scripts": {
+		"prewatch": "echo prewatch",
+		"postwatch": "echo postwatch",
+		"watch": "",
+		"build": "shx rm -rf build && shx rm -rf dist && npm run build:scss && npm run build:css:prefix && npm run build:css:minify && npm run build:js",
+		"build:scss": "node-sass src/scss/main.scss build/css/main.css --source-map true",
+		"build:css:prefix": "postcss --config postcss.config.js --replace \"build/css/*.css\" --map",
+		"build:css:minify": "cleancss -O1 specialComments:0 -O2 --output build/css/main.min.css build/css/main.css && shx mkdir -p dist/css && shx cp -rf build/css dist && shx rm -rf build/css",
+		"build:js": "npm run build:js:babel && npm run build:js:minify && shx mkdir -p dist/js && shx cp -rf build/js dist && shx rm -rf build/js",
+		"build:js:babel": "shx mkdir -p build/js && babel node_modules/jquery/dist/jquery.js node_modules/bootstrap/dist/js/bootstrap.bundle.js src/js --out-file build/js/main.js --source-maps",
+		"build:js:minify": "uglifyjs node_modules/jquery/dist/jquery.js node_modules/bootstrap/dist/js/bootstrap.bundle.js build/js/main.js -o build/js/main.min.js",
+		"lint": "npm run lint:html && npm run lint:scss && npm run lint:js",
+		"lint:html": "htmllint --rc .htmllintrc src/**/*.html || exit 0",
+		"lint:scss": "stylelint --config .stylelintrc --formatter verbose --syntax scss \"src/scss/**/*.scss\" || exit 0",
+		"lint:js": "eslint --config .eslintrc.json src/js/**/*.js || exit 0"
 	},
 	"keywords": [
 		"NPM",
 		"HTML",
 		"CSS",
+		"Bootstrap",
 		"SASS",
-		"JS"
+		"JS",
+		"jQuery"
 	],
 	"author": "Guillaume HAREL",
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"autoprefixer": "^7.1.6",
+		"babel-cli": "^6.26.0",
+		"babel-eslint": "^8.0.1",
+		"babel-preset-env": "^1.6.1",
+		"bootstrap": "^4.0.0-beta.2",
+		"browser-sync": "^2.18.13",
+		"clean-css-cli": "^4.1.10",
+		"cross-env": "^5.1.0",
+		"csscomb": "^4.2.0",
+		"eslint": "^4.9.0",
+		"eslint-plugin-compat": "^2.0.1",
+		"htmllint-cli": "0.0.6",
+		"imagemin": "^5.3.1",
+		"jquery": "^3.2.1",
+		"node-sass": "^4.5.3",
+		"npm-run-all": "^4.1.1",
+		"postcss-cli": "^4.1.1",
+		"shelljs": "^0.7.8",
+		"shx": "^0.2.2",
+		"stylelint": "^8.2.0",
+		"stylelint-config-recommended-scss": "^2.0.0",
+		"stylelint-config-standard": "^17.0.0",
+		"stylelint-order": "^0.7.0",
+		"stylelint-scss": "^2.1.0",
+		"svg-sprite": "^1.3.7",
+		"uglify-js": "^3.1.5"
+	},
+	"dependencies": {}
 }
