feat: backup code for gulm build system

--- a/package.json
+++ b/package.json
@@ -1,95 +1,72 @@
 {
-	"name": "boilerplate",
-	"version": "0.0.1",
-	"description": "boilerplate for front (CSS & JS automation)",
-	"config": {
-		"template_dir": "httpdocs/templates/skazy",
-		"project_url": "air-caledonie.local"
-	},
+	"name": "bci",
+	"version": "1.0.0",
+	"description": "BCInet 3.0",
+	"main": "gulpfile.js",
+	"license": "MIT",
 	"scripts": {
-		"start": "npm run watch",
-		"build": "npm run build:css && npm run build:js && npm run build:img && npm run build:svg",
-		"lint": "npm run lint:html && npm run lint:scss && npm run lint:js",
-		"watch": "npm-run-all --parallel watch:css watch:js watch:img watch:svg browsersync",
-		"watch:css": "nodemon --watch %npm_package_config_template_dir%/src/scss/ -e scss -x \"npm run watch:scss\"",
-		"watch:scss": "npm-run-all --sequential watch:scss:scss watch:scss:prefix",
-		"watch:scss:scss": "node-sass %npm_package_config_template_dir%/src/scss/main.scss %npm_package_config_template_dir%/build/css/main.css --source-map true",
-		"watch:scss:prefix": "postcss %npm_package_config_template_dir%/build/css/main.css --config postcss.config.js -o %npm_package_config_template_dir%/dist/css/main.css --map",
-		"watch:js": "npm-run-all --parallel watch:js:babel watch:js:third",
-		"watch:js:babel": "babel node_modules/jquery/dist/jquery.js node_modules/bootstrap/dist/js/bootstrap.bundle.js %npm_package_config_template_dir%/src/js/scripts --out-file %npm_package_config_template_dir%/dist/js/main.js --source-maps --watch",
-		"watch:js:third": "nodemon --watch %npm_package_config_template_dir%/src/js/ -e js --ignore scripts/ -x \"npm run build:js:third\"",
-		"watch:img": "nodemon --watch %npm_package_config_template_dir%/src/img/ -e png,jpg,jpeg,gif -x \"npm run build:img\"",
-		"watch:svg": "nodemon --watch %npm_package_config_template_dir%/src/svg/ -e svg -x \"npm run build:svg\"",
-		"build:css": "npm run build:css:clean && npm run build:css:init && npm run build:css:scss && npm run build:css:prefix && npm run build:css:minify && npm run build:css:copy",
-		"build:css:clean": "shx rm -rf %npm_package_config_template_dir%/build/css && shx rm -rf %npm_package_config_template_dir%/dist/css",
-		"build:css:init": "shx mkdir -p %npm_package_config_template_dir%/build/css && shx mkdir -p %npm_package_config_template_dir%/dist/css",
-		"build:css:scss": "node-sass %npm_package_config_template_dir%/src/scss/main.scss %npm_package_config_template_dir%/build/css/main.css --source-map true",
-		"build:css:prefix": "postcss --config postcss.config.js --replace \"%npm_package_config_template_dir%/build/css/main.css\" --map",
-		"build:css:minify": "cleancss -O1 specialComments:0 -O2 --output %npm_package_config_template_dir%/dist/css/main.min.css %npm_package_config_template_dir%/build/css/main.css",
-		"build:css:copy": "shx cp -rf %npm_package_config_template_dir%/build/css %npm_package_config_template_dir%/dist",
-		"build:js": "npm run build:js:clean && npm run build:js:init && npm run build:js:babel && npm run build:js:minify && npm run build:js:copy && npm run build:js:third",
-		"build:js:clean": "shx rm -rf %npm_package_config_template_dir%/build/js && shx rm -rf %npm_package_config_template_dir%/dist/js",
-		"build:js:init": "shx mkdir -p %npm_package_config_template_dir%/build/js && shx mkdir -p %npm_package_config_template_dir%/dist/js",
-		"build:js:babel": "babel node_modules/jquery/dist/jquery.js node_modules/bootstrap/dist/js/bootstrap.bundle.js %npm_package_config_template_dir%/src/js/scripts --out-file %npm_package_config_template_dir%/build/js/main.js --source-maps",
-		"build:js:minify": "uglifyjs %npm_package_config_template_dir%/build/js/main.js -o %npm_package_config_template_dir%/build/js/main.min.js",
-		"build:js:copy": "shx cp -rf %npm_package_config_template_dir%/build/js %npm_package_config_template_dir%/dist",
-		"build:js:third": "shx cp -rf %npm_package_config_template_dir%/src/js/*.js %npm_package_config_template_dir%/dist/js",
-		"build:img": "imagemin %npm_package_config_template_dir%/src/img/* --out-dir=%npm_package_config_template_dir%/dist/img/",
-		"build:svg": "svg-sprite --config=\"svg.config.json\" \"%npm_package_config_template_dir%/src/svg/**/*.svg\"",
-		"build:media:clean": "shx rm -rf %npm_package_config_template_dir%/dist/img && shx rm -rf %npm_package_config_template_dir%/dist/svg",
-		"build:media:init": "shx mkdir -p %npm_package_config_template_dir%/dist/img && shx mkdir -p %npm_package_config_template_dir%/dist/svg",
-		"lint:html": "htmllint --rc .htmllintrc %npm_package_config_template_dir%/**/*.html || exit 0",
-		"lint:scss": "stylelint --config .stylelintrc --formatter verbose --syntax scss \"%npm_package_config_template_dir%/src/scss/**/*.scss\" || exit 0",
-		"lint:js": "eslint --config .eslintrc.json %npm_package_config_template_dir%/src/js/scripts/**/*.js || exit 0",
-		"prestart": "npm install",
-		"prewatch": "npm run clean && npm run init",
-		"clean": "npm run build:css:clean && npm run build:js:clean && npm run build:media:clean",
-		"init": "npm run build:css:init && npm run build:js:init && npm run build:media:init",
-		"init:js": "shx cp -f node_modules/jquery/dist/jquery.js %npm_package_config_template_dir%/dist/js && shx cp -f node_modules/bootstrap/dist/js/bootstrap.bundle.js %npm_package_config_template_dir%/dist/js",
-		"scss:clean": "csscomb %npm_package_config_template_dir%/src/scss",
-		"browsersync": "browser-sync start --proxy \"%npm_package_config_project_url%\" --files \"%npm_package_config_template_dir%/dist\" --browser \"chrome\""
+		"lint": "npm run lint:scss & npm run lint:js",
+		"lint:fix": "npm run lint:scss:fix & npm run lint:js:fix",
+		"start": "gulp",
+		"build": "gulp build",
+		"postinstall": "npm run copy",
+		"lint:scss": "stylelint \"web/src/**/*.scss\"",
+		"lint:scss:fix": "stylelint \"web/src/**/*.scss\" --fix",
+		"lint:js": "eslint web/src/**/*.js",
+		"lint:js:fix": "eslint web/src/**/*.js --fix",
+		"copy": "npm run copy:css & npm run copy:js",
+		"copy:css": "npm run copy:select2:css & npm run copy:jquery-ui:css & npm run copy:scrollbar:css & npm run copy:quill:css",
+		"copy:js": "npm run copy:jquery:js & npm run copy:jquery-ui:js & npm run copy:bootstrap:js & npm run copy:select2:js & npm run copy:chart:js & npm run copy:scrollbar:js & npm run copy:monthpicker:js & npm run copy:jeditable:js & npm run copy:quill:js",
+		"copy:select2:css": "copyfiles -u 4 node_modules/select2/dist/css/select2.min.css web/medias/style",
+		"copy:jquery-ui:css": "copyfiles -u 4 node_modules/jquery-ui/themes/base/datepicker.css web/medias/style",
+		"copy:scrollbar:css": "copyfiles -u 3 node_modules/overlayscrollbars/css/OverlayScrollbars.min.css web/medias/style",
+		"copy:quill:css": "copyfiles -u 3 node_modules/quill/dist/quill.snow.css web/medias/style",
+		"copy:jquery:js": "copyfiles -u 3 node_modules/jquery/dist/jquery.min.js web/medias/script",
+		"copy:jquery-ui:js": "copyfiles -u 4 node_modules/jquery-ui/ui/widgets/datepicker.js web/medias/script & copyfiles -u 4 node_modules/jquery-ui/ui/i18n/datepicker-fr.js web/medias/script",
+		"copy:bootstrap:js": "copyfiles -u 4 node_modules/bootstrap/dist/js/bootstrap.bundle.min.js web/medias/script",
+		"copy:chart:js": "copyfiles -u 3 node_modules/chart.js/dist/Chart.min.js web/medias/script",
+		"copy:scrollbar:js": "copyfiles -u 3 node_modules/overlayscrollbars/js/jquery.overlayScrollbars.min.js web/medias/script",
+		"copy:select2:js": "copyfiles -u 4 node_modules/select2/dist/js/select2.min.js web/medias/script",
+		"copy:monthpicker:js": "copyfiles -u 2 node_modules/jquery-ui-monthpicker/jquery.ui.monthpicker.js web/medias/script",
+		"copy:jeditable:js": "copyfiles -u 3 node_modules/jquery-jeditable/dist/jquery.jeditable.min.js web/medias/script",
+		"copy:quill:js": "copyfiles -u 3 node_modules/quill/dist/quill.min.js web/medias/script"
 	},
-	"keywords": [
-		"NPM",
-		"HTML",
-		"CSS",
-		"Bootstrap",
-		"SASS",
-		"JS",
-		"jQuery"
-	],
-	"author": "Guillaume HAREL",
-	"license": "ISC",
 	"devDependencies": {
-		"autoprefixer": "^7.1.6",
-		"babel-cli": "^6.26.0",
-		"babel-eslint": "^8.0.1",
-		"babel-preset-env": "^1.6.1",
-		"browser-sync": "^2.24.6",
-		"clean-css-cli": "^4.1.10",
-		"csscomb": "^4.2.0",
-		"eslint": "^4.9.0",
-		"eslint-plugin-compat": "^2.0.1",
-		"htmllint-cli": "0.0.6",
-		"imagemin": "^5.3.1",
-		"imagemin-cli": "^3.0.0",
-		"node-sass": "^4.9.3",
-		"nodemon": "^1.12.1",
-		"npm-run-all": "^4.1.1",
-		"postcss-cli": "^4.1.1",
-		"shelljs": "^0.7.8",
-		"shx": "^0.2.2",
-		"stylelint": "^8.2.0",
-		"stylelint-config-recommended-scss": "^2.0.0",
-		"stylelint-config-standard": "^17.0.0",
-		"stylelint-order": "^0.7.0",
-		"stylelint-scss": "^2.1.0",
-		"svg-sprite": "^1.3.7",
-		"uglify-js": "^3.1.5"
+		"@babel/preset-env": "^7.9.5",
+		"autoprefixer": "^9.7.6",
+		"babel-eslint": "^10.1.0",
+		"browser-sync": "^2.26.7",
+		"copyfiles": "^2.2.0",
+		"eslint": "^6.8.0",
+		"gulp": "^4.0.2",
+		"gulp-babel": "^8.0.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-csso": "^4.0.1",
+		"gulp-iconfont": "^10.0.3",
+		"gulp-iconfont-css": "^3.0.0",
+		"gulp-imagemin": "^7.1.0",
+		"gulp-postcss": "^8.0.0",
+		"gulp-rename": "^2.0.0",
+		"gulp-sass": "^4.1.0",
+		"gulp-sourcemaps": "^2.6.5",
+		"gulp-uglify": "^3.0.2",
+		"stylelint": "^13.3.3",
+		"stylelint-config-recommended-scss": "^4.2.0",
+		"stylelint-config-standard": "^20.0.0",
+		"stylelint-order": "^4.0.0",
+		"stylelint-scss": "^3.17.1",
+		"wallace-cli": "^2.4.0"
 	},
 	"dependencies": {
-		"bootstrap": "4.0.0-beta.2",
-		"jquery": "3.2.1"
+		"bootstrap": "^4.4.1",
+		"chart.js": "^2.9.3",
+		"jquery": "^3.5.0",
+		"jquery-jeditable": "^2.0.16",
+		"jquery-ui": "^1.12.1",
+		"jquery-ui-monthpicker": "^1.0.3",
+		"natives": "^1.1.6",
+		"overlayscrollbars": "^1.12.0",
+		"quill": "^1.3.7",
+		"select2": "^4.0.13"
 	}
-
 }
