--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-### macOS template
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+### macOS ###
 # General
 .DS_Store
 .AppleDouble
@@ -26,7 +41,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-### Windows template
+### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
 ehthumbs.db
@@ -36,7 +51,7 @@ ehthumbs_vista.db
 *.stackdump
 
 # Folder config file
-Desktop.ini
+[Dd]esktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
@@ -44,40 +59,22 @@ $RECYCLE.BIN/
 # Windows Installer files
 *.cab
 *.msi
+*.msix
 *.msm
 *.msp
 
 # Windows shortcuts
 *.lnk
 
-### Sass template
-.sass-cache/
-*.css.map
-
-### JetBrains template
-# User-specific stuff:
+### PhpStorm ###
+# User-specific stuff
 .idea/
 
-## File-based project format:
-*.iws
+### NotepadPP ###
+# Notepad++ backups #
+*.bak
 
-## Plugin-specific files:
-# IntelliJ
-out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-### Node template
+### Node ###
 # Logs
 logs
 *.log
@@ -116,7 +113,7 @@ build/Release
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
+# TypeScript v1 declaration files
 typings/
 
 # Optional npm cache directory
@@ -137,8 +134,32 @@ typings/
 # dotenv environment variables file
 .env
 
-### Specific
-dist/
-build/
-temp/
-tmp/
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+### Sass ###
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+
+### Docker ###
+docker-compose.override.yml
+
+### Composer ###
+
+vendor
+
+### Project's specific ###
